--- a/src/main/resources/scss/profile/components/_head.scss
+++ b/src/main/resources/scss/profile/components/_head.scss
@@ -42,6 +42,7 @@
 		max-width: 3rem;
 		min-width: 3rem;
 		width: 3rem;
+		height: 3rem;
 		float: left;
 		margin: 0.5rem;
 	}
